plugins {
    id 'application'
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'io.github.jwharm.javagi:gtk:0.11.2'
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(22)
    }
}

tasks.named('run') {
    jvmArgs += '--enable-native-access=ALL-UNNAMED'
}

application {
    mainClass = 'io.github.jwharm.javagi.examples.pegsolitaire.PegSolitaire'
}

